--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "template-front-end-project-webpack",
+  "name": "template-front-end-project-webpack-bootstrap",
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "main": "dist/bundle.js",
+  "main": "dist/js/bundle.js",
   "scripts": {
     "test": "jest",
     "dev": "webpack --mode development",
@@ -62,6 +62,9 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.5.0",
+    "lodash": "^4.17.15",
+    "popper.js": "^1.16.1"
   }
 }
